--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "postinstall": "gulp build"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -13,11 +12,7 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
-  },
-  "devDependencies": {
-    "babel-preset-es2015": "^6.6.0",
-    "bower": "^1.7.9",
+    "serve-favicon": "~2.3.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
@@ -28,6 +23,11 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.3",
     "main-bower-files": "^2.13.0",
-    "moment": "^2.13.0"
+    "moment": "^2.13.0",
+
+    "babel-preset-es2015": "^6.6.0",
+  },
+  "devDependencies": {
+    "bower": "^1.7.9"
   }
 }
