--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "gulp-uglify": "^1.5.3",
     "main-bower-files": "^2.13.0",
     "moment": "^2.13.0",
-
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.6.0"
   },
   "devDependencies": {
     "bower": "^1.7.9"
