--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "preinstall": "npm install -g gulp-cli",
-    "postinstall": "gulp build"
+    "postinstall": "bower install && gulp build"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
