--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "preinstall": "npm install -g gulp-cli",
-    "postinstall": "bower install && gulp build"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -26,9 +24,9 @@
     "gulp-uglify": "^1.5.3",
     "main-bower-files": "^2.13.0",
     "moment": "^2.13.0",
-    "babel-preset-es2015": "^6.6.0"
+    "babel-preset-es2015": "^6.6.0",
+    "bower": "^1.7.9"
   },
   "devDependencies": {
-    "bower": "^1.7.9"
   }
 }
