--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -4,7 +4,7 @@ export HOME=$OPENSHIFT_REPO_DIR
 if [ -f "${OPENSHIFT_REPO_DIR}"/bower.json ]; then
  (cd "${OPENSHIFT_REPO_DIR}"; node_modules/.bin/bower install)
 fi
-if [ -f "${OPENSHIFT_REPO_DIR}"/Gulpfile.js ]; then
+if [ -f "${OPENSHIFT_REPO_DIR}"/gulpfile.js ]; then
  (cd "${OPENSHIFT_REPO_DIR}"; node_modules/.bin/gulp build)
 fi
 export HOME=$OLD_HOME
