--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -1,5 +1,6 @@
 #!/bin/bash
 OLD_HOME=$HOME
+echo "Bower & Gulp"
 export HOME=$OPENSHIFT_REPO_DIR
 if [ -f "${OPENSHIFT_REPO_DIR}"/bower.json ]; then
  (cd "${OPENSHIFT_REPO_DIR}"; node_modules/.bin/bower install)
